--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <h1>🚏 Abfahrten deiner Haltestelle</h1>
   <div id="output">Lade Daten...</div>
-  <script src="rmv_script.js"></script>
+  <script type="module" src="rmv_script.js"></script>
 </body>
 </html>
